--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,6 +56,7 @@ p {
   display: flex;
   align-content: center;
   border: 1px solid;
+  justify-content: center;
 }
 
 .large {
@@ -68,6 +69,8 @@ p {
 
 .large .top .image {
   background-image: url(../images/img-story-main.png);
+  overflow: visible;
+  display: flex;
 }
 
 .bottom {
@@ -82,6 +85,10 @@ p {
 .left {
   width: 280px;
   display: inline-block;
+}
+
+.bottom .left .image {
+  background-image: url(../images/img-story-2.png);
 }
 
 .medium {
