--- a/resources/images/MyTimes_files/style.css
+++ b/resources/images/MyTimes_files/style.css
@@ -116,8 +116,8 @@ h3 {
 
 .medium .image {
   background-image: url(../images/img-story-1.png);
-  width: 300px;
-  text-align: left;
+  height: 300px;
+  text-align: center;
 }
 
 .small {
@@ -160,41 +160,41 @@ h3 {
   color: white;
 }
 
-footer {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 325px;
-  background-color: mediumaquamarine;
+#footer {
+  background-color: MediumAquamarine;
   margin: auto;
-  font-family: "Verdana", sans-serif;
+  font-family: Verdana;
   font-size: 12px;
 }
 
-footer .info .title{
-  display: inline-block;
-  padding-right: 25px;
-  border-right: 2px solid white;
-  font-family: "Georgia", serif;
+#footer .container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+#footer h4 {
+  font-family: Georgia;
   font-size: 16px;
   font-weight: bold;
   color: white;
-}
-
-footer nav {
   display: inline-block;
-  padding-left: 25px;
+  width: 100px;
+}
+
+#footer_nav {
+  display: inline-flex;
+  justify-content: center;
+  justify-content: space-around;
+  margin: auto;
 
 }
 
-footer nav span {
+#footer_nav .span {
   margin: 20px;
 }
 
-footer .copy {
-  display: block;
+footer .container .copy {
   font-family: Verdana;
   font-size: 12px;
 }
